Fixed Background video cover Issues
Make the video cover the full screen size, add responsiveness to always center and added overlay to video.

--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@
 /*  Global   */
 
 *{
+
   font-family: "Josefin Sans";
   padding: 0;
   margin:0;
@@ -105,11 +106,11 @@ body{
 
 /*  SHOWCASE LANDING PAGE   */
 
-section.showcase{
+.showcase{
   position: relative;
   top: 0;
   left:0;
-  min-width: 100%;
+  width: 100%;
   min-height: 100vh;
   overflow: hidden;
   display: flex;
@@ -117,18 +118,26 @@ section.showcase{
   align-items: center;
 }
 
-section .videoContainer{
-  background: #fdfbff;
+.showcase .videoContainer video{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+  z-index: 1;
+}
+.showcase .videoContainer .overlay{
   position: absolute;
   top: 0;
   left:0;
-  min-width: 100%;
-  min-height: 100vh;
-  object-fit:cover;
-  overflow: hidden;
-  z-index: 3;
-}
+  z-index:2;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.2);
 
+}
 
 nav.sticky{
   width: 100%;
@@ -608,46 +617,4 @@ width:80px;
 .modal .modal-content .close span{
   display: block;
   font-size: 20px;
-}
-.gallery{
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background:#f5f5f0;
-}
-.box1{
-  position: relative;
-  width:200px;
-  height:250px;
-  transform-style: preserve-3d;
-  animation:animate 20s linear infinite;
-}
-@keyframes animate {
-  0%{
-    transform: perspective(1000px) rotateY(0deg);
-  }
-  100%{
-    transform:perspective(1000px) rotateY(360deg);
-  }
-}
-.box1 span{
-  position: absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  transform-origin: center;
-  transform-style: preserve-3d;
-  transform:rotateY(calc(var(--i)*45deg))translateZ(400px);
-  -webkit-box-reflect: below 0px linear-gradient(transparent,transparent,#0004);
-​
-}
-.box1 span img{
-  position: absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  object-fit: cover;
 }
